--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -41,24 +41,24 @@
 		border3-bg:			#eaeaea,
 
 		accent1: (
-			bg:				#4acaa8,
-			fg-bold:		#ffffff,
-			fg:				mix(#4acaa8, #ffffff, 25%),
-			fg-light:		mix(#4acaa8, #ffffff, 40%)
+			bg:				#0F044C,
+			fg-bold:		#cccccc,
+			fg:				mix(#0F044C, #cccccc, 25%),
+			fg-light:		mix(#0F044C, #cccccc, 40%)
 		),
 
 		accent2: (
-			bg:				#989898,
-			fg-bold:		#ffffff,
-			fg:				mix(#989898, #ffffff, 25%),
-			fg-light:		mix(#989898, #ffffff, 40%)
+			bg:				#787A91,
+			fg-bold:		#cccccc,
+			fg:				mix(#787A91, #cccccc, 25%),
+			fg-light:		mix(#787A91, #cccccc, 40%)
 		),
 
 		header: (
-			bg:				#4acaa8,
-			fg-bold:		#ffffff,
-			fg:				mix(#4acaa8, #ffffff, 25%),
-			fg-light:		mix(#4acaa8, #ffffff, 40%),
-			border:			mix(#4acaa8, #ffffff, 90%)
+			bg:				#0F044C,
+			fg-bold:		#cccccc,
+			fg:				mix(#0F044C, #cccccc, 25%),
+			fg-light:		mix(#0F044C, #cccccc, 40%),
+			border:			mix(#0F044C, #cccccc, 90%)
 		)
 	);
