--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -41,10 +41,10 @@
 		border3-bg:			#eaeaea,
 
 		accent1: (
-			bg:				#0F044C,
+			bg:				#501B1D,
 			fg-bold:		#cccccc,
-			fg:				mix(#0F044C, #cccccc, 25%),
-			fg-light:		mix(#0F044C, #cccccc, 40%)
+			fg:				mix(#501B1D, #cccccc, 25%),
+			fg-light:		mix(#501B1D, #cccccc, 40%)
 		),
 
 		accent2: (
@@ -55,10 +55,10 @@
 		),
 
 		header: (
-			bg:				#0F044C,
+			bg:				#501B1D,
 			fg-bold:		#cccccc,
-			fg:				mix(#0F044C, #cccccc, 25%),
-			fg-light:		mix(#0F044C, #cccccc, 40%),
-			border:			mix(#0F044C, #cccccc, 90%)
+			fg:				mix(#501B1D, #cccccc, 25%),
+			fg-light:		mix(#501B1D, #cccccc, 40%),
+			border:			mix(#501B1D, #cccccc, 90%)
 		)
 	);
